# bevy_template

./: Cargo.toml  Cargo.toml.template  Trunk.toml  post-generate.rhai
.github/workflows/: release.yaml  release.yaml.template
src/: assets.rs  game.rs  lib.rs  main.rs  main.rs.template  utils.rs
src/dev/: mod.rs
web/: index.html.template
