[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_asset_loader = "0.21.0"
bevy_embedded_assets = "0.11.0"

[profile.dev.build-override]
bevy_dylib = "0.14.2"

[build-dependencies]
embed-resource = "2.4.3"

[profile.dev]
debug = 0
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
