[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_asset_loader = "0.22.0"
bevy_console = "0.13.0"
clap = "4.5.23"

[profile.dev.build-override]
bevy_dylib = "0.14.1"

[build-dependencies]
embed-resource = "3.0.1"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
anic = 'abort'
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]
default = []
